Edited to: 1. In an earlier version of this project I had to edit the pom file to import the test package. 2. resolve incorrect package references. 3. resolve 3 errors where the generated code attempted to pass a list as a string. 4. resolve 2 warnings about code smells where the generated code attempted to get the elemend at index 0 rather than calling the method getFirst()